--- a/.github/workflows/hub-cd.yaml
+++ b/.github/workflows/hub-cd.yaml
@@ -30,5 +30,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frencharmyknive:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frencharmyknife:latest
           platforms: linux/amd64,linux/arm64
