--- a/frencharmy.yaml
+++ b/frencharmy.yaml
@@ -1,4 +1,5 @@
 # Kubernetes deployment for running a container for examining/debugging other pods
+# testing comment and CI/CD
 apiVersion: apps/v1
 kind: Deployment
 metadata:
