--- a/frencharmy.yaml
+++ b/frencharmy.yaml
@@ -1,5 +1,5 @@
 # Kubernetes deployment for running a container for examining/debugging other pods
-# testing comment and CI/CD...again
+# testing comment and CI/CD...again...and again
 apiVersion: apps/v1
 kind: Deployment
 metadata:
